fixed scrolling mobile to sections and used z-index: -1 to manage images overlapping with menu overlay

--- a/src/app/main-content/about/about.component.scss
+++ b/src/app/main-content/about/about.component.scss
@@ -36,9 +36,7 @@
 }
 
 @media screen and (max-width: 820px) {
-    #about {
-        scroll-margin-top: 40px;
-    }
+
     h2 {
         margin-bottom: 32px;
     }
