--- a/src/app/main-content/navbar-mobile/navbar-mobile.component.scss
+++ b/src/app/main-content/navbar-mobile/navbar-mobile.component.scss
@@ -49,6 +49,7 @@ header {
         background-color: styles.$dark-grey;
         width: 100%;
         z-index: 20;
+        position: absolute;
         
         .menu-wrapper {
             display: flex;
