--- a/src/app/main-content/projects/projects.component.scss
+++ b/src/app/main-content/projects/projects.component.scss
@@ -122,9 +122,6 @@
 }
 
 @media screen and (max-width: 820px) {
-    #projects {
-        scroll-margin-top: 40px;
-    }
 
     .project-menu {
         .project-menu-box {
