--- a/src/app/main-content/references/references.component.scss
+++ b/src/app/main-content/references/references.component.scss
@@ -1,9 +1,5 @@
 @use '../../../styles.scss';
 
-#references {
-    scroll-margin-top: 120px;
-}
-
 .title-mobile {
     display: none;
 }
@@ -60,6 +56,7 @@
 
         img {
             position: absolute;
+            z-index: 10;
             top: 0;
             left: 0;
         }
@@ -91,6 +88,7 @@
 
         .references-wrapper {
             height: 342px;
+            z-index: -1;
             .reference-info {
                 width: 360px;
             }
