--- a/src/app/main-content/skills/skills.component.scss
+++ b/src/app/main-content/skills/skills.component.scss
@@ -91,9 +91,6 @@
 }
 
 @media screen and (max-width: 820px) {
-    #skills {
-        scroll-margin-top: 40px;
-    }
     h2 {
         margin-bottom: 40px;
     }
@@ -151,10 +148,12 @@
         flex-direction: row-reverse;
         gap: 48px;
         margin-bottom: 36px;
+        z-index: -1;
 
         .bg-mobile {
             display: block;
             position: absolute;
+            z-index: 10;
         }
     }
 
